--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,7 +7,7 @@ EXPOSE 5050
 COPY Pipfile Pipfile.lock ./
 
 RUN pip install pipenv
-RUN pipenv lock install --requirements > requirements.txt
+RUN pipenv lock install > requirements.txt
 RUN pip install requirements.txt
 
 
