--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,8 +7,9 @@ EXPOSE 5050
 COPY Pipfile Pipfile.lock ./
 
 RUN pip install pipenv
-RUN pipenv lock install > requirements.txt
-RUN pip install requirements.txt
+RUN pipenv lock
+RUN pipenv install --system --deploy
+
 
 
 COPY . ./
