--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,9 +7,8 @@ EXPOSE 5050
 COPY Pipfile Pipfile.lock ./
 
 RUN pip install pipenv
-RUN pipenv lock
-RUN pipenv install --system --deploy
-
+RUN pipenv lock --requirements > requirements.txt
+RUN pip install -r -requirements.txt
 
 
 COPY . ./
